# iotawattpy

./: .gitignore  .pre-commit-config.yaml  README.md  example.py  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
iotawattpy/: __init__.py  connection.py  iotawatt.py  sensor.py
tests/: __init__.py  test_iotawatt_update.py  test_sensorio_getset.py
